fixed small layout bug on "plugin options" screen added CSS to admin style sheet to handle issues in 2.8
git-svn-id: https://wp-table-reloaded.googlecode.com/svn/trunk@26 335f5990-30c3-11de-96ab-f16d9912eac9

--- a/admin/admin-style.css
+++ b/admin/admin-style.css
@@ -19,11 +19,25 @@ table.wp-table-reloaded-options th {
 
 table.wp-table-reloaded-data-manipulation { width:100%; }
 
+table#table_contents td, table#table_contents th {
+    white-space:nowrap;
+    vertical-align: middle;
+}
+
+table#table_contents input[type=text] {
+    width:100%;
+}
+
 .hide_link, .expand_link {
     position: absolute;
     right: 10px;
     font-weight: normal;
     cursor: pointer;
+    padding: 0px!important;
+}
+
+.postbox h3.hndle {
+    cursor: pointer!important;
 }
 
 div.postbox .expand_link { display: none; }
